--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     src='//in.fw-cdn.com/31678446/852135.js'
     chat='true'>
     </script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Form</title>
