--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
     <div class="container">
         <h2>Contact Us</h2>
-        <form action="/submit-your-form-handler" method="post">
+        <form id="NEwForm">
             <div class="form-group">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
