--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <label for="message">Message:</label>
                 <textarea id="message" name="message" required></textarea>
             </div>
-            <input type="submit" value="Submit">
+            <button><span class="l7_2fn wixui-button__label">Send</span></button>
         </form>
     </div>
 </body>
