--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
             </div>
             <button><span class="l7_2fn wixui-button__label">Send</span></button>
         </form>
+        <script>  
+document.querySelector("copy the selector from the website button").type = "submit"; 
+</script>
     </div>
 </body>
 </html>
