--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                 <label for="message">Message:</label>
                 <textarea id="message" name="message" required></textarea>
             </div>
-            <button><span class="#NEwForm > button">Send</span></button>
+<button><span class="l7_2fn wixui-button__label">Send</span></button>
         </form>
         <script>  
-document.querySelector("copy the selector from the website button").type = "submit"; 
+document.querySelector("#NEwForm > button > span").type = "submit"; 
 </script>
     </div>
 </body>
