--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
 <button><span class="l7_2fn wixui-button__label">Send</span></button>
   <script>  
-document.querySelector("#NEwForm > button > span").type = "submit"; 
+document.querySelector("#NEwForm > button").type = "submit"; 
 </script>
         </form>
         
